--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "form-data": "^4.0.0",
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
@@ -53,6 +54,7 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "unsplash-js": "^7.0.19",
     "zod": "^3.24.2"
   },
   "devDependencies": {
