--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev --turbopack --port 9002 --hostname 0.0.0.0",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
+    "generate:images": "tsx src/ai/scripts/generate-and-save-images.ts",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -65,6 +66,8 @@
     "genkit-cli": "^1.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.16.2",
     "typescript": "^5"
   }
 }
+
