--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dotenv": "^16.4.5",
     "genkit-cli": "^1.14.1",
     "imagemin": "^9.0.1",
     "imagemin-mozjpeg": "^10.0.0",
