--- a/package.json
+++ b/package.json
@@ -1,15 +1,67 @@
-
 {
-  "name": "tirthyatra-root",
+  "name": "TirthYatra",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run dev --workspace=TirthYatra --",
-    "build": "npm run build --workspace=TirthYatra",
-    "start": "npm run start --workspace=TirthYatra",
-    "lint": "npm run lint --workspace=TirthYatra"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "workspaces": [
-    "TirthYatra"
-  ]
+  "dependencies": {
+    "@google-cloud/aiplatform": "^3.22.0",
+    "@hookform/resolvers": "^3.6.0",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.4",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "common-tags": "^1.8.2",
+    "dotenv": "^16.4.5",
+    "embla-carousel-autoplay": "^8.1.3",
+    "embla-carousel-react": "^8.1.3",
+    "genkit": "1.0.0-rc.3",
+    "@genkit-ai/googleai": "1.0.0-rc.3",
+    "zod": "^3.23.8",
+    "react-hook-form": "^7.51.5",
+    "recharts": "^2.12.7",
+    "react-day-picker": "^8.10.1",
+    "lucide-react": "^0.390.0",
+    "next": "14.2.3",
+    "react": "^18",
+    "react-dom": "^18",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "@types/common-tags": "^1.8.4",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5",
+    "ts-node": "^10.9.2"
+  }
 }
